New-Upload-1755854042013/objects/Profile_Login_Ip_Ranges__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the IP range</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Address__c</fullName>
        <description>End IP address</description>
        <label>End Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record (displays Profile Name)</description>
        <label>Profile Name Lookup</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Login IP Ranges by Name</relationshipLabel>
        <relationshipName>Login_Ip_Ranges_By_Name</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Profile Admin record</description>
        <label>Profile Name</label>
        <referenceTo>Profile_Admin__c</referenceTo>
        <relationshipLabel>Login IP Ranges</relationshipLabel>
        <relationshipName>Login_Ip_Ranges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Address__c</fullName>
        <description>Start IP address</description>
        <label>Start Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Profile Login IP Ranges</label>
    <nameField>
        <displayFormat>PLIR-{0000}</displayFormat>
        <label>Login IP Range Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Login IP Ranges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>